# helloworld

./: .gitignore  CMakeLists.txt  Makefile  greet.cxx  greet.hxx  main.cxx
conda-recipe/: meta.yaml
conda-recipe-10.7_libc++/: build.sh  meta.yaml
conda-recipe-10.7_libstdc++/: build.sh  meta.yaml
example/: CMakeLists.txt  Makefile  build_10_7_libc++.sh  build_10_7_libstdc++.sh  main.cxx
helloworld/: greet.hxx
itk_package_config/: helloworld-config-develop.cmake.in  helloworld-config.cmake.in
